--- a/templates/index2.html
+++ b/templates/index2.html
@@ -13,9 +13,9 @@
         />
       </video>
     </div>
-    <div class="" style="text-align: center">
+    <!-- BOOK -->
+    <!-- <div class="" style="text-align: center" id="book">
       <h1>Nigerian Air Force Museum and Archives</h1>
-      <!-- Book -->
       <div class="flipbook-viewport">
         <div class="container">
           <div class="flipbook">
@@ -63,19 +63,8 @@
                 </text>
               </svg>
             </div>
-            <!-- <div class="hard"></div> -->
             <div class="hard" style="background-color: white;">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 800">
-                <!-- <rect width="100%" height="100%" fill="#83c5d6" /> -->
-                <!-- <rect
-                  x="20"
-                  y="20"
-                  width="560"
-                  height="760"
-                  fill="#ffffff"
-                  stroke="#333333"
-                  stroke-width="4"
-                /> -->
                 <g id="lineGroup"></g>
                 <g id="imageGroup"></g>
           
@@ -132,14 +121,24 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+    <!-- BOOK -->
 
     <!-- STYLUS -->
 
-    <!-- <div>
-      <canvas id="canvas" width="500" height="300"></canvas>
-      <button>Save</button>
-    </div> -->
+    <div class="" style="text-align: center" id="canvas">
+        <h1>Please write your name</h1>
+        <canvas id="canvas" width="500" height="300"></canvas>
+        <div>
+          <div style="display: flex; flex-direction: column; align-items: flex-end">
+            <div style="background-color: black; width: 50px; height: 50px; border-radius: 50%; margin-bottom: 10px"></div>
+            <div style="background-color: blue; width: 50px; height: 50px; border-radius: 50%; margin-bottom: 10px"></div>
+            <div style="background-color: green; width: 50px; height: 50px; border-radius: 50%; margin-bottom: 10px"></div>
+          </div>
+        </div>
+        <button style="margin-top: 20px;">Save</button>
+      </div>
+      
 
     <!-- STYLYS -->
 
