store guests properly

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -70,7 +70,11 @@
                 "
               ></canvas>
 
-              <button style="width: fit-content" id="save" onclick="save()">Save</button>    
+              <div class="buttons">
+                <button style="width: fit-content" id="save" onclick="saveCanvas()">Save</button>    
+                <button style="width: fit-content" id="save" onclick="clearCanvas()">Clear</button>    
+                <button style="width: fit-content" id="save" onclick="cancelCanvas()">Cancle</button>
+              </div>
               <!-- <button style="width: fit-content">Reset</button> -->
             </div>
           </div>
