--- a/static/css/register.css
+++ b/static/css/register.css
@@ -137,3 +137,9 @@ form button {
   gap: 30px;
   cursor: pointer;
 }
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  cursor: pointer;
+}
