--- a/templates/index.html
+++ b/templates/index.html
@@ -1,162 +1,216 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 19:41:03 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6473ab8dd7e6a2cb065af64e" data-wf-site="6473ab8dd7e6a2cb065af683">
-<head>
-  <meta charset="utf-8">
-  <title>Direct Reporting Units</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Webflow" name="generator">
-  <link href="{{url_for('static', filename='css/normalize.css')}}" rel="stylesheet" type="text/css">
-  <link href="{{url_for('static', filename='css/webflow.css')}}" rel="stylesheet" type="text/css">
-  <link href="{{url_for('static', filename='css/nafowa-dc2160627f08e64544-aff4c361766df.webflow.css')}}" rel="stylesheet" type="text/css">
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
-  <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
-  <style>
-/*width*/
-::-webkit-scrollbar {
-width:3px;
-height: 3px;
-}
-/*track*/
-::-webkit-scrollbar-track {
-background:rgba(0, 0, 0, 0.13);
-border-radius:30px;
-}
-/*thumb*/
-::-webkit-scrollbar-thumb {
-background:rgb(0, 0, 0);
-border-radius:30px;
-}
-</style>
-</head>
-<body>
-  <div data-poster-url="https://uploads-ssl.webflow.com/6462afec4f8264e900bae6ae/64633d4b87fffe29c107a370_background video-poster-00001.jpg" data-video-urls="videos/background-video-transcode.mp4,https://uploads-ssl.webflow.com/6473ab8dd7e6a2cb065af683/6473ab8dd7e6a2cb065af6a8_background%20video-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video id="ddb79196-93d9-72bb-4ff0-bd8b04e4ea5f-video" autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/6462afec4f8264e900bae6ae/64633d4b87fffe29c107a370_background video-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-      <source src="{{url_for('static', filename='videos/background-video-transcode.mp4')}}" data-wf-ignore="true">
-      <source src="https://uploads-ssl.webflow.com/6473ab8dd7e6a2cb065af683/6473ab8dd7e6a2cb065af6a8_background%20video-transcode.webm" data-wf-ignore="true">
-    </video>
-    <div class="title-wrapper">
-      <div class="title-logo"><img src="{{url_for('static', filename='images/NIGERIAN-FLAG-TITLE_1NIGERIAN FLAG TITLE.jpg')}}" loading="lazy" alt="" class="image-airforce-logo"></div>
-      <div class="title_text">
-        <div class="text-block">WELCOME TO THE NAF MUSEUM</div>
-        <!-- <div class="text-block-2">NAF DIRECT REPORTING UNITS</div> -->
-      </div>
-      <div class="title-logo"><img src="{{url_for('static', filename='images/AIR-FORCE-LOGO.jpg')}}" loading="lazy" sizes="55.99609375px" srcset="static/images/AIR-FORCE-LOGO-p-500.png 500w, images/AIR-FORCE-LOGO-p-800.png 800w, images/AIR-FORCE-LOGO-p-1080.png 1080w, images/AIR-FORCE-LOGO.png 1424w" alt="" class="image-2"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Welcome to the Nigerian Air Force Museum and Archives</title>
+    <link rel="stylesheet" href="../static/css/register.css" />
+  </head>
+  <body>
+    <div class="video-container">
+      <video autoplay loop muted>
+        <source
+          src="{{url_for('static', filename='videos/background-video-transcode.mp4')}}"
+          type="video/mp4"
+        />
+      </video>
     </div>
-    <div class="container c-space">
+    <!-- BOOK -->
+    <div class="" style="text-align: center" id="book">
+      <h1>Nigerian Air Force Museum and Archives</h1>
+      <div class="flipbook-viewport">
+        <div class="container">
+          <div class="stylus-container" id="canvasContainer">
+            <div class="pen-colors">
+              <div
+                class="pen-color"
+                style="
+                  border: 2px solid white;
+                  background-color: blue;
+                  height: 50px;
+                  width: 50px;
+                  border-radius: 50%;
+                "
+              ></div>
+              <div
+                class="pen-color"
+                style="
+                  border: 2px solid white;
+                  background-color: red;
+                  height: 50px;
+                  width: 50px;
+                  border-radius: 50%;
+                "
+              ></div>
+              <div
+                class="pen-color"
+                style="
+                  border: 2px solid white;
+                  background-color: black;
+                  height: 50px;
+                  width: 50px;
+                  border-radius: 50%;
+                "
+              ></div>
+            </div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+              "
+            >
+              <canvas
+                width="1000"
+                height="600"
+                id="canvas"
+                style="
+                  background-color: white;
+                  box-shadow: 0rem 0rem 4.5rem -0.6rem #676161;
+                  border-radius: 20px;
+                "
+              ></canvas>
 
-        <div class="flipbook-viewport">
-          <div class="container">
-            <div class="flipbook">
-              <div class="coverPage hard">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 600">
-                  <rect width="100%" height="100%" fill="#83c5d6" />
-                  <rect
-                    x="20"
-                    y="20"
-                    width="360"
-                    height="560"
-                    fill="#ffffff"
-                    stroke="#333333"
-                    stroke-width="4"
-                  />
-                  <image
-                    x="100"
-                    y="80"
-                    width="200"
-                    height="200"
-                    href="static/images/AIR-FORCE-LOGO.png"
-                    alt="Logo"
-                  />
-                  <text
-                    x="200"
-                    y="300"
-                    font-family="Arial"
-                    font-size="36"
-                    text-anchor="middle"
-                    fill="#333333"
-                    style="fill: #83c5d6; font-family: 'Helvetica', sans-serif;"
-                  >
-                    NAF MUSEUM
-                  </text>
-                  <text
-                    x="200"
-                    y="350"
-                    font-family="Arial"
-                    font-size="24"
-                    text-anchor="middle"
-                    fill="#777777"
-                    style="fill: #83c5d6; font-family: 'Helvetica', sans-serif;"
-                  >
-                    Guest Register
-                  </text>
-                </svg>
+              <div class="buttons">
+                <button style="width: fit-content" id="save" onclick="saveCanvas()">Save</button>    
+                <button style="width: fit-content" id="save" onclick="clearCanvas()">Clear</button>    
+                <button style="width: fit-content" id="save" onclick="cancelCanvas()">Cancle</button>
               </div>
-              <div class="hard"></div>
-              <div>Page 2</div>
-              <div class="hard"></div>
+              <!-- <button style="width: fit-content">Reset</button> -->
+            </div>
+          </div>
+          <!-- <button style="width: fit-content" id="signIn">Sign In</button> -->
+          <div class="pen-colors" id="colors" style="padding-left: 200px;">
+            <div
+              class="pen-color"
+              style="
+                border: 2px solid white;
+                background-color: blue;
+                height: 50px;
+                width: 50px;
+                border-radius: 50%;
+              "
+            ></div>
+            <div
+              class="pen-color"
+              style="
+                border: 2px solid white;
+                background-color: red;
+                height: 50px;
+                width: 50px;
+                border-radius: 50%;
+              "
+            ></div>
+            <div
+              class="pen-color"
+              style="
+                border: 2px solid white;
+                background-color: black;
+                height: 50px;
+                width: 50px;
+                border-radius: 50%;
+              "
+            ></div>
+          </div>
+          
+          <div class="flipbook">
+            <div class="coverPage hard">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 700">
+                <rect width="100%" height="100%" fill="#83c5d6" />
+                <rect
+                  x="20"
+                  y="20"
+                  width="360"
+                  height="560"
+                  fill="#ffffff"
+                  stroke="#333333"
+                  stroke-width="4"
+                />
+                <image
+                  x="100"
+                  y="80"
+                  width="200"
+                  height="200"
+                  href="static/images/AIR-FORCE-LOGO.png"
+                  alt="Logo"
+                />
+                <text
+                  x="200"
+                  y="350"
+                  font-family="Arial"
+                  font-size="36"
+                  text-anchor="middle"
+                  fill="#333333"
+                  style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
+                >
+                  NAF MUSEUM
+                </text>
+                <text
+                  x="200"
+                  y="400"
+                  font-family="Arial"
+                  font-size="24"
+                  text-anchor="middle"
+                  fill="#777777"
+                  style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
+                >
+                  Guest Register
+                </text>
+              </svg>
             </div>
           </div>
         </div>
-      
-    </div>
-    <div class="footer-section">
-      <div class="footer-text">
-        <div class="text-block-3">NIGERIAN AIRFORCE HALL OF FAME</div>
       </div>
     </div>
-  </div>
-  <!-- TurnJS -->
-  <script type="text/javascript" src="{{url_for('static', filename='js/turnjs4/extras/jquery.min.1.7.js')}}"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='js/turnjs4/extras/modernizr.2.5.3.min.js')}}"></script>
 
-  <script type="text/javascript">
-
-    function loadApp() {
-    
-      // Create the flipbook
-    
-      $('.flipbook').turn({
-          // Width
-    
-          width:922,
-          
-          // Height
-    
-          height:600,
-    
-          // Elevation
-    
-          elevation: 50,
-          
-          // Enable gradients
-    
-          gradients: true,
-          
-          // Auto center this flipbook
-    
-          autoCenter: true
-    
-      });
-    }
-    
-    // Load the HTML4 version if there's not CSS transform
-    
-    yepnope({
-      test : Modernizr.csstransforms,
-      yep: ['static/js/turnjs4/lib/turn.js'],
-      nope: ['static/js/turnjs4/lib/turn.html4.min.js'],
-      both: ['static/js/turnjs4/samples/basic/css/basic.css'],
-      complete: loadApp
-    });
-    
-    </script>
-  <!-- TurnJS -->
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6467f858f89d8c8ef0f69c02" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="{{url_for('static', filename='js/jquery-3.5.1.min.dc5e7f18c8.js')}}" type="text/javascript"></script>
-  <script src="{{url_for('static', filename='js/webflow.js')}}" type="text/javascript"></script>
-  <script src="main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="{{url_for('static', filename='js/swiper-bundle.min.js')}}" type="text/javascript"></script>
-</body>
+    <script src="../static/js/register.js"></script>
+  </body>
 </html>
+
+<!-- TurnJS -->
+<script
+  type="text/javascript"
+  src="{{url_for('static', filename='js/turnjs4/extras/jquery.min.1.7.js')}}"
+></script>
+<script
+  type="text/javascript"
+  src="{{url_for('static', filename='js/turnjs4/extras/modernizr.2.5.3.min.js')}}"
+></script>
+
+<script type="text/javascript">
+  function loadApp() {
+    // Create the flipbook
+
+    $(".flipbook").turn({
+      // Width
+
+      width: 922,
+
+      // Height
+
+      height: 700,
+
+      // Elevation
+
+      elevation: 50,
+
+      // Enable gradients
+
+      gradients: true,
+
+      // Auto center this flipbook
+
+      autoCenter: true,
+    });
+  }
+
+  // Load the HTML4 version if there's not CSS transform
+
+  yepnope({
+    test: Modernizr.csstransforms,
+    yep: ["static/js/turnjs4/lib/turn.js"],
+    nope: ["static/js/turnjs4/lib/turn.html4.min.js"],
+    both: ["static/js/turnjs4/samples/basic/css/basic.css"],
+    complete: loadApp,
+  });
+</script>
+<!-- TurnJS -->
