Added pen icons

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -186,19 +186,8 @@
                   fill="#333333"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
                 >
-                  NAF MUSEUM & ARCHIVES
-                </text>
-                <text
-                  x="200"
-                  y="350"
-                  font-family="Arial"
-                  font-size="36"
-                  text-anchor="middle"
-                  fill="#333333"
-                  style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
-                >
-                  & ARCHIVES
-                </text>
+                  NAF MUSEUM 
+                </text>                 
                 <text
                   x="200"
                   y="400"
