--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,35 @@
         text-align: center;
         font-size: 2rem; 
       }
+
+      /*https://codepen.io/alvarotrigo/pen/PoKMyNO*/
+      .animate-character
+      {
+        text-transform: uppercase;
+        background-image: linear-gradient(
+          -225deg,
+          #ffa500 0%,
+          #fff800 29%,
+          #ee82ee 67%,
+          #fff 100%
+        );
+        background-size: auto auto;
+        background-clip: border-box;
+        background-size: 200% auto;
+        color: #fff;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textclip 10s linear infinite;
+        display: inline-block; 
+      }
+
+      @keyframes textclip {
+        to {
+          background-position: 200% center;
+        }
+      }
     </style>
 
 
