Added animation to heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
     <div class="title-wrapper menu">
       <div class="title-logo menu-item"><img src="{{url_for('static', filename='images/NIGERIAN-FLAG-TITLE_1NIGERIAN FLAG TITLE.jpg')}}" loading="lazy" alt="" class="image-airforce-logo"></div>
       <div class="title_text menu-item" style="color: #fff">
-        <div class="text-block title-text">WELCOME TO THE NAF MUSEUM & ARCHIVES</div> 
+        <div class="text-block title-text animate-character">WELCOME TO THE NAF MUSEUM & ARCHIVES</div> 
       </div>
       <div class="title-logo menu-item"><img style="margin-top: -.4rem;" src="{{url_for('static', filename='images/AIR-FORCE-LOGO.jpg')}}" loading="lazy" sizes="55.99609375px" srcset="static/images/AIR-FORCE-LOGO-p-500.png 500w, images/AIR-FORCE-LOGO-p-800.png 800w, images/AIR-FORCE-LOGO-p-1080.png 1080w, images/AIR-FORCE-LOGO.png 1424w" alt="" class="image-2"></div>
     </div>
