Added support for touch and eraser

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,9 +69,7 @@
         <div class="text-block title-text animate-character">WELCOME TO THE NAF MUSEUM & ARCHIVES</div> 
       </div>
       <div class="title-logo menu-item"><img style="margin-top: -.4rem;" src="{{url_for('static', filename='images/AIR-FORCE-LOGO.jpg')}}" loading="lazy" sizes="55.99609375px" srcset="static/images/AIR-FORCE-LOGO-p-500.png 500w, images/AIR-FORCE-LOGO-p-800.png 800w, images/AIR-FORCE-LOGO-p-1080.png 1080w, images/AIR-FORCE-LOGO.png 1424w" alt="" class="image-2"></div>
-    </div>
-
-    <!-- BOOK -->
+    </div> 
     <div class="" style="text-align: center" id="book">
       <!--<h1>Nigerian Air Force Museum and Archives</h1>-->
       <div class="flipbook-viewport">
@@ -137,7 +135,8 @@
               </h3>
               <div class="buttons">
                 <button style="width: fit-content" id="save" onclick="saveCanvas()">Save</button>    
-                <button style="width: fit-content;background-color: coral;" id="save" onclick="clearCanvas()">Clear</button>    
+                <button style="width: fit-content;background-color: coral;" id="save" onclick="clearCanvas()">Clear</button> 
+                <button style="width: fit-content;background-color: grey;color:white;" id="delete" onclick="toggleEraser()">Erase</button> 
                 <!--<button style="width: fit-content" id="save" onclick="cancelCanvas()">Cancel</button>-->
               </div>
               <!-- <button style="width: fit-content">Reset</button> -->
@@ -240,8 +239,11 @@
           </div>
         </div>
       </div>
+
+      
     </div>
 
+     
     <script src="script.js"></script>
     <script src="../static/js/register.js"></script>
   </body>
